[package]
name = "implicit-clone"
version = "0.1.1"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Immutable types and ImplicitClone trait similar to Copy"
repository = "https://github.com/rustminded/implicit-clone"
homepage = "https://github.com/rustminded/implicit-clone"
documentation = "https://docs.rs/implicit-clone"
readme = "README.md"
keywords = ["immutable", "cheap-clone", "copy", "rc"]
categories = ["rust-patterns"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
map = ["indexmap"]

[dependencies]
indexmap = { version = "1", optional = true }
