[package]
name = "implicit-clone"
version = "0.3.7"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Immutable types and ImplicitClone trait similar to Copy"
repository = "https://github.com/yewstack/implicit-clone"
homepage = "https://github.com/yewstack/implicit-clone"
documentation = "https://docs.rs/implicit-clone"
readme = "README.md"
keywords = ["immutable", "cheap-clone", "copy", "rc"]
categories = ["rust-patterns"]
rust-version = "1.64"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
map = ["indexmap"]
serde = ["dep:serde", "indexmap/serde"]

[dependencies]
indexmap = { version = "2", optional = true }
serde = { version = "1", optional = true }
